--- a/portfolio.html
+++ b/portfolio.html
@@ -33,58 +33,79 @@
     </header>
     <main>
         <!--Фільтри-->
-          <section>
-            <ul class="list">
+        <section>
+        <!-- <h1>Головна</h1> -->
+          <ul class="list">
                 <li><button class="filters-btn" type="button">Усі</button></li>
                 <li><button class="filters-btn"type="button">Веб-сайти</button></li>
                 <li><button class="filters-btn"type="button">Додатки</button></li>
                 <li><button class="filters-btn"type="button">Дизайн</button></li>
                 <li><button class="filters-btn" type="button">Маркетинг</button></li>
-                
+                </ul>
+        
+            <ul class="list">
     <li>
+        <a>
         <img src="images/tehno.jpg" alt="ноутбук" width="370" height="294">
-        <h3>Технокряк</h3>
+        <h2>Технокряк</h2>
         <p>Веб-сайт</p>
+        </a>
     </li>
     <li>
+        <a>
         <img src="./images/poster.jpg" alt="Баскетболісти" width="370" height="294">
-        <h3>Постер New Orlean vs Golden Star</h3>
+        <h2>Постер New Orlean vs Golden Star</h2>
         <p>Дизайн</p>
+        </a>
     </li>
     <li>
+        <a>
         <img src="./images/restoran.jpg" alt="морська їжа" width="370" height="294">
-        <h3>Ресторан Seafood</h3>
+        <h2>Ресторан Seafood</h2>
         <p>Додаток</p>
+        </a>
     </li>
     <li>
+        <a>
         <img src="./images/proekt.jpg" alt="навушники" width="370" height="294">
-        <h3>Проєкт Prime</h3>
+        <h2>Проєкт Prime</h2>
         <p>Маркетинг</p>
+        </a>
     </li>
     <li>
+        <a>
         <img src="./images/proektboxes.jpg" alt="Дві коробки" width="370" height="294">
-        <h3>Проєкт Boxes</h3>
+        <h2>Проєкт Boxes</h2>
         <p>Додаток</p>
+        </a>
     </li>
     <li>
+        <a>
         <img src="./images/inspiration.jpg" alt="монітор" width="370" height="294">
-        <h3>Inspiration has no Borders</h3>
+        <h2>Inspiration has no Borders</h2>
         <p>Веб-сайт</p>
+        </a>
     </li>
     <li>
+        <a>
         <img src="./images/limited_edition.jpg" alt="журнал" width="370" height="294">
-        <h3>Видання Limited Edition</h3>
+        <h2>Видання Limited Edition</h2>
         <p>Дизайн</p>
+        </a>
     </li>
     <li>
+        <a>
         <img src="./images/lab.jpg" alt="лейба" width="370" height="294">
-        <h3>Проєкт LAB</h3>
+        <h2>Проєкт LAB</h2>
         <p>Маркетинг</p>
+        </a>
     </li>
     <li>
+        <a>
         <img src="./images/growing.jpg" alt="ноутбук руки" width="370" height="294">
-        <h3>Growing Business</h3>
+        <h2>Growing Business</h2>
         <p>Додаток</p>
+        </a>
     </li>
 </ul>
 </section>
