посилання на порфоліо

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <ul class="header-nav">
                 <li>
                     <a class="header-nav-link" href="">Студія</a></li>
-                <li><a class="header-nav-link" class="header-nav-link"href="">Портфоліо</a></li>
+                <li><a class="header-nav-link" class="header-nav-link"href="./portfolio.html">Портфоліо</a></li>
                 <li>
                     <a class="header-nav-link"href="">Контакти</a></li>
             </ul>
