--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,7 @@
         <nav>
             <ul class="header-nav">
                 <li>
-                    <a class="header-nav-link" href="">Студія</a>
+                    <a class="header-nav-link" href="./index.html">Студія</a>
                 </li>
                 <li><a class="header-nav-link" class="header-nav-link" href="">Портфоліо</a></li>
                 <li>
