добавив стилі у портфоліо, та добавив значення

--- a/portfolio.html
+++ b/portfolio.html
@@ -45,66 +45,66 @@
         
             <ul class="list">
     <li>
-        <a>
+        <a class="options">
         <img src="images/tehno.jpg" alt="ноутбук" width="370" height="294">
-        <h2>Технокряк</h2>
-        <p>Веб-сайт</p>
+        <h2 class="options-name">Технокряк</h2>
+        <p class="options-addition">Веб-сайт</p>
         </a>
     </li>
     <li>
         <a>
         <img src="./images/poster.jpg" alt="Баскетболісти" width="370" height="294">
-        <h2>Постер New Orlean vs Golden Star</h2>
-        <p>Дизайн</p>
+        <h2 class="options-name">Постер New Orlean vs Golden Star</h2>
+        <p class="options-addition">Дизайн</p>
         </a>
     </li>
     <li>
         <a>
         <img src="./images/restoran.jpg" alt="морська їжа" width="370" height="294">
-        <h2>Ресторан Seafood</h2>
-        <p>Додаток</p>
+        <h2 class="options-name">Ресторан Seafood</h2>
+        <p class="options-addition">Додаток</p>
         </a>
     </li>
     <li>
         <a>
         <img src="./images/proekt.jpg" alt="навушники" width="370" height="294">
-        <h2>Проєкт Prime</h2>
-        <p>Маркетинг</p>
+        <h2 class="options-name">Проєкт Prime</h2>
+        <p class="options-addition">Маркетинг</p>
         </a>
     </li>
     <li>
         <a>
         <img src="./images/proektboxes.jpg" alt="Дві коробки" width="370" height="294">
-        <h2>Проєкт Boxes</h2>
-        <p>Додаток</p>
+        <h2 class="options-name">Проєкт Boxes</h2>
+        <p class="options-addition">Додаток</p>
         </a>
     </li>
     <li>
         <a>
         <img src="./images/inspiration.jpg" alt="монітор" width="370" height="294">
-        <h2>Inspiration has no Borders</h2>
-        <p>Веб-сайт</p>
+        <h2 class="options-name">Inspiration has no Borders</h2>
+        <p class="options-addition">Веб-сайт</p>
         </a>
     </li>
     <li>
         <a>
         <img src="./images/limited_edition.jpg" alt="журнал" width="370" height="294">
-        <h2>Видання Limited Edition</h2>
-        <p>Дизайн</p>
+        <h2 class="options-name">Видання Limited Edition</h2>
+        <p class="options-addition">Дизайн</p>
         </a>
     </li>
     <li>
         <a>
         <img src="./images/lab.jpg" alt="лейба" width="370" height="294">
-        <h2>Проєкт LAB</h2>
-        <p>Маркетинг</p>
+        <h2 class="options-name">Проєкт LAB</h2>
+        <p class="options-addition">Маркетинг</p>
         </a>
     </li>
     <li>
         <a>
         <img src="./images/growing.jpg" alt="ноутбук руки" width="370" height="294">
-        <h2>Growing Business</h2>
-        <p>Додаток</p>
+        <h2 class="options-name">Growing Business</h2>
+        <p class="options-addition">Додаток</p>
         </a>
     </li>
 </ul>
